--- a/code-rogba/src/css/include/include.css
+++ b/code-rogba/src/css/include/include.css
@@ -28,6 +28,8 @@
     float: right;
     text-align: center;
     overflow:auto;
+    display:table-cell;
+    vertical-align:middle;
 }
 
 .inc_footer{
