--- a/code-rogba/src/css/include/include.css
+++ b/code-rogba/src/css/include/include.css
@@ -3,7 +3,7 @@
     width: 100%;
 }
 
-#inc_header{
+.inc_header{
     position: relative;
     background-color: aqua;
     width: 100%;
@@ -11,8 +11,11 @@
     text-align: center;
 }
 
+.inc_sub{
+    width: 100%;
+}
 
-#inc_menu{
+.inc_menu{
     background-color: yellow;
     width: 15%;
     height: 100vh;
@@ -21,8 +24,7 @@
     overflow:auto;
 }
 
-#inc_main{
-    background-color: brown;
+.inc_main{
     width: 85%;
     height: 100vh;
     float: right;
@@ -30,6 +32,10 @@
     overflow:auto;
     display:table-cell;
     vertical-align:middle;
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #EFF3F7;
 }
 
 .inc_footer{
